# inogram

./: .env.example  .gitignore  Cargo.toml  README.md  schema.sql
src/: api.rs  main.rs  models.rs  random.rs
src/db/: mod.rs  types.rs
src/services/: email.rs  events.rs  message.rs  mod.rs  user.rs
