[package]
name = "inogram"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.0"
axum = "0.8.3"
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.27"
rand = "0.9.0"
redis = { version = "0.29.2", features = ["tokio-rustls-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.44.1", features = ["full"] }
